# labb3-seartch-algoritmer-dt064g

./: Binary_seartch_tree.cpp  Binary_seartch_tree.h  Binarysearch.cpp  Binarysearch.h  CMakeLists.txt  Hash_table.cpp  Hash_table.h  Node.h  Sekvensiell_seartch.cpp  Sekvensiell_seartch.h  generate_primes.cpp  generate_primes.h  main.cpp  print.py  time_calc.h
